--- a/election(cors프록시서버 구축).html
+++ b/election(cors프록시서버 구축).html
@@ -19,7 +19,7 @@
             display: flex; justify-content: center; align-items: center;}
     </style>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
-    <script src="./js/jquery-1.12.4.min.js"></script>
+    <script src="./jquery-1.12.4.min.js"></script>
 </head>
 <body>
     
@@ -40,7 +40,7 @@
         <!-- <div class="loading">로딩중</div> -->
     </div>
 
-    <script src="./js/election(cors프록시서버 구축).js"></script>
+    <script src="./election(cors프록시서버 구축).js"></script>
 
 </body>
 </html>
